--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -4,7 +4,7 @@
 
 <html lang="en">
 <head>
-    <title>Ecom new site</title>
+    <title>Ecom-agian new site</title>
 
     <meta name="viewport" content="width=device-width, intial-scale=1,
      maximum-scale=1, minimum-scale=1" charset="UTF-8">
