--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -44,7 +44,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'store' %}">Store</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'store' %}">Store new</a>
         </li>
       </ul>
 
